# biotrack

./: .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  biotrack.code-workspace  db.surql  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.surql  vite.config.ts
.cargo/: config.toml
.github/workflows/: publish.yml  release.yml
apps/carnival/: README.md  package.json  vite.config.ts
apps/carnival/src/routes/: +page.svelte
apps/reader/: README.md  package.json
apps/reader/src/: index.ts
apps/rpi-joiner/: package.json
apps/rpi-joiner/src/: index.ts
apps/website/: package.json  svelte.config.js  vite.config.ts
apps/website/prisma/: schema.prisma
apps/website/scripts/: seed.ts
apps/website/src/: app.d.ts  hooks.server.ts
apps/website/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte
book/: README.md  book.toml  mermaid-init.js
book/src/: SUMMARY.md  api.md  bindings.md  contributing.md  introduction.md  security.md  structure.md
book/src/bindings/: csharp.md
book/src/security/: https.md
carnival/: package.json
crates/reader/: Cargo.toml  README.md
crates/reader/.cargo/: config.toml
crates/reader/.cargo/avr-specs/: avr-atmega1280.json  avr-atmega168.json  avr-atmega2560.json  avr-atmega328p.json  avr-atmega32u4.json  avr-atmega48p.json  avr-attiny85.json  avr-attiny88.json
crates/reader/src/: main.rs
crates/rfid-rs/: .gitignore  Cargo.toml  README.md
crates/rfid-rs/doc/: more_info.md
crates/rfid-rs/examples/: beagle.rs  rpi.rs
crates/rfid-rs/src/: error.rs  lib.rs  picc.rs  register.rs  tests.rs  util.rs
crates/rfid-rs/src/comm/: mod.rs
crates/rfid-rs/src/comm/blocking/: i2c.rs  mod.rs  spi.rs  uart.rs
crates/rfid-rs/src/comm/eh02/: i2c.rs  mod.rs  spi.rs
embedded/: README.md
embedded/esp8266/: platformio.ini
embedded/esp8266/lib/: README
embedded/esp8266/src/: main.cpp
embedded/esp8266/test/: README
embedded/nfc-peripheral/: platformio.ini
embedded/nfc-peripheral/src/: main.cpp
migration/: Cargo.toml
prisma/: schema.prisma
prisma/migrations/20231231162645_init/: migration.sql
prisma/migrations/20240110150413_init/: migration.sql
prisma/migrations/20240111004419_init/: migration.sql
reader/: package.json
reader/src/: index.ts
src/: app.d.ts  app.html  main.rs
src/lib/: prisma.ts  prismaConnection.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/(home)/: +page.server.ts  +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/game/: +page.server.ts  +page.svelte
src/routes/mobile/: +page.svelte
src/routes/player/: +page.server.ts  +page.svelte
src/routes/unsafe/: +page.svelte
website/: package.json  vite.config.ts
website/prisma/: dev.db  schema.prisma
website/scripts/: seed.ts
(+162 files in other folders)
