[package]
name = "reader"
version = "0.1.0"
authors = ["Tristan F. <LeoDog896@hotmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "reader"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d827cdd"
features = ["arduino-uno"]
